# sunkream_DRF

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  manage.py  prompt_plan.md  pyproject.toml  spec.md
.github/workflows/: ci.yml
core/: exceptions.py  mixins.py  responses.py
docs/: architecture-overview.md  code-review.md  concurrency-analysis.md  infra-docker-cicd.md  legacy-backend-api-design.md  plan-crud-features.md  project-flow.md
docs/plans/: 2026-03-25-documentation-consolidation-design.md  2026-03-25-documentation-consolidation.md
orders/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_alter_bidding_status.py
products/: models.py  serializers.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_brand_options.py
sunkream_api/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  factories.py  test_auth.py  test_common_response.py  test_orders.py  test_products.py  test_user_model.py
users/: managers.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_customuser_user_point_non_negative.py
